2012-03-11  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/samplerate.c
    Fix error message for error SRC_ERR_BAD_DATA_PTR. Thanks for oneman in
    #xiph on Freenode.

    * examples/audio_out.c
    Minor tweaks to Windows and OSX code.

2011-11-05  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/samplerate.h
    Removed unused typedef struct SRC_CB_DATA.

    * examples/varispeed-play.c
    Rewrite to use the callback version of the API. This new version is far
    simpler and far easier to understand.

2011-11-02  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * configure.ac examples/Makefile.am
    Detect ALSA and use it in varispeed-play.

    * examples/audio_out.[ch]
    On Linux used ALSA instead of OSS when available.

    * src/samplerate.c src/src_linear.c src/src_zoh.c \
            examples/sndfile-resample.c examples/timewarp-file.c
    Fix warnings from the Goanna static analysis tool.

2011-08-15  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * configure.ac
    Add symbol support for kfreebsd-*-gnu-*.

    * configure.ac doc/Makefile.am
    Improve installation of html docs.

    * examples/audio_out.c tests/callback_hang_test.c
    Fix compiler warnings.

    * NEWS README Win32/config.h doc/*.html
    Updates for 0.1.8 release.

    * configure.ac
    Release 0.1.8.

2011-02-22  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * tests/util.[ch]
    Rename function print_cpu_name() to get_cpu_name(). Add code for Mac OSX and
    FreeBSD.

    * tests/multichan_throughput_test.c tests/throughput_test.c
    Update to use get_cpu_name().

2010-11-04  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/*.[ch]
    Fix typo in comments.

2010-10-16  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/fastest_coeffs.h src/high_qual_coeffs.h src/mid_qual_coeffs.h
    Fix typo in comments.

    * configure.ac
    Add AM_SILENT_RULES.

    * doc/download.html
    Add a GPG signature.
