@@ -1,3 +1,8 @@
+2012-08-22  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
+
+    * src/src_sinc.c
+    Cleanup calculation of float_increment.
+
 2012-03-11  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
 
     * src/samplerate.c
